<resources>
    <string name="app_name">WolfScore</string>
    <string name="i_m_new_to_wolfscore">I\'m new to WolfScore!</string>
    <string name="log_me_in">Log me in</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--//setup screen 1 to 3 strings-->
    <string name="previous">Previous</string>
    <string name="next">NEXT</string>
    <string name="select_favorites">Select Favorites</string>
    <string name="skip">SKIP</string>
    <string name="search">Search</string>
    <string name="popular_teams">Popular Teams</string>
    <string name="select_your_favorite_clubs_and_national_teams_to_follow">Select your favorite clubs and national teams to follow</string>
    <string name="local_teams">Local Teams</string>
    <string name="added_as_favorite"> added as favorite</string>
    <string name="top_players">TOP PLAYERS</string>
    <string name="no_result_found">No Result Found</string>


    <!--Notifications -->
    <string name="notifications">Notifications</string>
    <string name="notificationsCapital">NOTIFICATIONS</string>
    <string name="choose_when_you_want_us_to_notify_you_when_things_happen">Choose when you want us to notify you when things happen</string>
    <string name="notification_types">NOTIFICATION TYPES</string>
    <string name="all_events">All events</string>
    <string name="red_cards">Red Cards</string>
    <string name="yellow_cards">Yellow Cards</string>
    <string name="started">Started</string>
    <string name="transfers">Transfers</string>
    <string name="goals">Goals</string>

    <string name="favrouit">Favorite</string>
    <string name="following">FOLLOWING</string>
    <string name="my_favorites">My Favorites</string>
    <string name="done">Done</string>
    /////
    <string name="yesterday">YESTERDAY</string>
    <string name="today">TODAY</string>
    <string name="Tomorrow">TOMORROW</string>

    <!--About match-->
    <string name="match_facts">MATCH FACTS</string>
    <string name="media">MEDIA</string>
    <string name="head_to_head">HEAD TO HEAD</string>
    <string name="line_up">LINE UP</string>
    <string name="live_tracker">LIVE TICKER</string>
    <string name="table">TABLE</string>
    <string name="statistics">STATISTICS</string>
    <string name="man_of_the_match">MAN OF THE MATCH</string>
    <string name="tournament">Tournament</string>
    <string name="stadium">Stadium</string>
    <string name="referees">Referees</string>
    <string name="attendance">Attendance</string>
    <string name="cancel">Cancel</string>
    <string name="popular_teams1">Popular Teams</string>


    <!--Filter tournament -->
    <string name="filter_tournaments">Filter tournaments</string>
    <string name="popular">Popular</string>
    <string name="deselect_all">Deselect all</string>
    <string name="select_all">Select all</string>
    <string name="sorting">Sorting</string>
    <string name="reset">Reset</string>
    <string name="move_to_top">Move to top</string>
    <string name="move_to_bottom">Move to bottom</string>
    <string name="drag_the_competitions_in_the_order_you_want_in_the_live_window_or_select_them_and_use_the_buttons_to_creat_your_preferred_sorting">Drag the competitions in the order you want in the live window or select them and use the buttons to creat your preferred sorting</string>
//////////////line up
    <string name="bench">BENCH</string>
    <string name="keeper">Keeper</string>
    <string name="defender">Defender</string>
    <string name="midfielder">Midfielder</string>
    <string name="attacker">Attacker</string>
    <string name="coach">Coach</string>
    <string name="injuared_and_suspended_player">Injuared and suspended player</string>
    <string name="no_data_found">No Data found</string>
    <string name="top_stats">Top Stats</string>
    <string name="ball_passesion">Ball Possesion</string>

   /////////league
    <string name="trophies">TROPHIES</string>
    <string name="matches">MATCHES</string>
    <string name="news">NEWS</string>
    <string name="overview">OVERVIEW</string>
    <string name="squad">SQUAD</string>
    <string name="total_shots">Total shots</string>
    <string name="popular_league">Popular League</string>
    <string name="select_your_league">Select your favorite league to follow</string>
    <string name="my_matches">My Matches</string>
    <string name="all_matches">All Matches</string>
    <string name="ongoing">Ongoing</string>
    <string name="by_time">By Time</string>
    <string name="show_all">Show All Matches</string>
    <string name="top_faetures">TOP FEATURES</string>
    <string name="my_profile">My Profile</string>
    <string name="matche">Matches</string>
    <string name="settings">Settings</string>
    <string name="about_us">About Us</string>
    <string name="premium_features">PREMIUM FEATURES</string>
    <string name="remove_banner_add">Remove banner-ads</string>
    <string name="restore_previous_purchase">Restore Previous Purchases</string>


</resources>
