<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/bg_search"
    android:orientation="vertical">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:orientation="vertical">


        <LinearLayout
        android:id="@+id/my_match_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_4sdp"
        android:visibility="visible"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/ongoing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ongoing"
            android:textSize="@dimen/_12sdp"
            android:textColor="@color/inactive_txt"
            android:background="@color/Header_bg"
            android:padding="@dimen/_8sdp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:fontFamily="@font/roboto_medium"
            android:gravity="center"
            android:layout_marginRight="@dimen/_2sdp"
            />


        <TextView
            android:id="@+id/my_matches"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/my_matches"
            android:textSize="@dimen/_12sdp"
            android:textColor="@color/active_text"
            android:background="@color/list_item_bg"
            android:padding="@dimen/_8sdp"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginLeft="@dimen/_2sdp"
            android:fontFamily="@font/roboto_medium"
            android:layout_weight="1"
            />
        <TextView
            android:visibility="gone"
            android:id="@+id/all_matches"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/all_matches"
            android:textSize="@dimen/_12sdp"
            android:textColor="@color/inactive_txt"
            android:background="@color/Header_bg"
            android:padding="@dimen/_8sdp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:fontFamily="@font/roboto_medium"
            android:gravity="center"
            android:layout_marginLeft="@dimen/_4sdp"
            android:layout_marginRight="@dimen/_4sdp"
            />
        <TextView
            android:visibility="gone"
            android:id="@+id/by_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/by_time"
            android:textSize="@dimen/_12sdp"
            android:textColor="@color/inactive_txt"
            android:background="@color/Header_bg"
            android:padding="@dimen/_8sdp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:fontFamily="@font/roboto_medium"
            android:gravity="center"
            android:layout_marginLeft="@dimen/_4sdp"
            />



    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <se.emilsjolander.stickylistheaders.StickyListHeadersListView
        android:id="@+id/list"
        android:background="@color/bg_search"
        android:layout_width="match_parent"
        android:dividerHeight="0dp"
        android:layout_height="match_parent"/>

        <LinearLayout
            android:id="@+id/no_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
           android:orientation="vertical"
            android:gravity="center"
            android:visibility="gone"
            android:layout_centerInParent="true"
            >
            <ImageView
                android:visibility="gone"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_70sdp"
                android:layout_gravity="center"
                android:scaleType="fitXY"
                android:src="@drawable/logo"/>
            <TextView
                android:id="@+id/no_data_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_12sdp"
                android:textColor="@color/active_text"
                android:text="@string/no_data_found"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginTop="@dimen/_8sdp"
                android:fontFamily="@font/roboto_medium"
                />
            <TextView
                android:id="@+id/show_all"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_12sdp"
                android:textColor="@color/colorBlue"
                android:layout_margin="@dimen/_4sdp"
                android:padding="@dimen/_6sdp"
                android:background="@drawable/holo_blue_bg"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/show_all"
                />

        </LinearLayout>

    </RelativeLayout>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</LinearLayout>