<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <RelativeLayout
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:background="@color/list_item_bg"
    android:layout_height="match_parent">
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_margin="@dimen/_18sdp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="@dimen/_60sdp"
                    android:layout_height="@dimen/_60sdp"
                    android:src="@drawable/ic_player_placeholder"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Adam Hazard"
                    android:textColor="@color/active_text"
                    android:textSize="@dimen/_14sdp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="adam.hazard@gmail.com"
                    android:layout_centerInParent="true"
                    android:textColor="@color/inactive_txt"
                    android:textSize="@dimen/_10sdp"
                    />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/search_bg">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/top_faetures"
                    android:layout_margin="@dimen/_8sdp"
                    android:fontFamily="@font/roboto_medium"
                    android:textColor="@color/inactive_txt"
                    android:textSize="@dimen/_12sdp"
                    />

            </LinearLayout>
            <LinearLayout
                android:id="@+id/profile_layout"
                android:gravity="center|left"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:src="@drawable/my_profile_ico"
                    android:layout_margin="@dimen/_8sdp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/my_profile"
                    android:layout_margin="@dimen/_8sdp"
                    android:fontFamily="@font/roboto_medium"
                    android:textColor="@color/active_text"
                    android:textSize="@dimen/_12sdp"
                    />
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height=".5dp"
                android:background="@color/search_bg"/>
            <LinearLayout
                android:id="@+id/match_layout"
                android:gravity="center|left"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:src="@drawable/matches_ico"
                    android:layout_margin="@dimen/_8sdp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/matche"
                    android:layout_margin="@dimen/_8sdp"
                    android:fontFamily="@font/roboto_medium"
                    android:textColor="@color/active_text"
                    android:textSize="@dimen/_12sdp"
                    />
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height=".5dp"
                android:background="@color/search_bg"/>
            <LinearLayout
                android:id="@+id/setting_layout"
                android:gravity="center|left"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:src="@drawable/setting_ico"
                android:layout_margin="@dimen/_8sdp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings"
                android:layout_margin="@dimen/_8sdp"
                android:fontFamily="@font/roboto_medium"
                android:textColor="@color/active_text"
                android:textSize="@dimen/_12sdp"
                />
        </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height=".5dp"
                android:background="@color/search_bg"/>
            <LinearLayout
                android:id="@+id/about_layout"
                android:gravity="center|left"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:src="@drawable/about_ico"
                android:layout_margin="@dimen/_8sdp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_us"
                android:layout_margin="@dimen/_8sdp"
                android:fontFamily="@font/roboto_medium"
                android:textColor="@color/active_text"
                android:textSize="@dimen/_12sdp"
                />
        </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height=".5dp"
                android:background="@color/search_bg"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/search_bg">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/premium_features"
                    android:layout_margin="@dimen/_8sdp"
                    android:fontFamily="@font/roboto_medium"
                    android:textColor="@color/inactive_txt"
                    android:textSize="@dimen/_12sdp"
                    />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/banner_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center|left"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:src="@drawable/banner_ads_ico"
                    android:layout_marginLeft="@dimen/_8sdp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/remove_banner_add"
                    android:layout_margin="@dimen/_8sdp"
                    android:fontFamily="@font/roboto_medium"
                    android:textColor="@color/active_text"
                    android:textSize="@dimen/_12sdp"
                    />
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height=".5dp"
                android:background="@color/search_bg"/>
            <LinearLayout
                android:id="@+id/purchase_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center|left"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:src="@drawable/purchaseas_ico"
                    android:layout_marginLeft="@dimen/_8sdp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/restore_previous_purchase"
                    android:layout_margin="@dimen/_8sdp"
                    android:fontFamily="@font/roboto_medium"
                    android:textColor="@color/active_text"
                    android:textSize="@dimen/_12sdp"
                    />
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height=".5dp"
                android:background="@color/search_bg"/>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</RelativeLayout>
</layout>