<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        tools:context="com.wolfscore.fragment.TopPlayerFragment">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">
        <RelativeLayout
            android:id="@+id/action_bar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:visibility="gone"
            android:background="@color/colorPrimary">

            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_centerVertical="true"
                android:padding="@dimen/_5sdp"
                android:src="@drawable/ic_back" />

            <TextView
                style="@style/largeRobotoMediumStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/select_favorites"
                android:textColor="@color/colorWhite" />

        </RelativeLayout>

        <TextView
            android:id="@+id/tv_top_player"
            style="@style/mediumRobotoRegularStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_10sdp"
            android:layout_marginLeft="@dimen/_50sdp"
            android:layout_marginStart="@dimen/_50sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/top_players"
            android:textColor="@color/colorWhite" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_top_player"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

        </android.support.v7.widget.RecyclerView>


        </LinearLayout>
        <!--this user in add favrouit player activity and fragment-->
        <RelativeLayout
            android:id="@+id/rl_bottom_bar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:background="@color/colorBalck1"
            android:gravity="bottom"
            android:visibility="gone"
            >

            <TextView
                android:id="@+id/btn_done"
                style="@style/SmallRobotoRegularStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/done"
                android:layout_alignParentRight="true"
                android:textColor="@color/colorBlue"
                android:layout_centerVertical="true"
                android:padding="@dimen/_6sdp"
                />

            <TextView
                android:id="@+id/tv_favroit_team"
                style="@style/SmallRobotoRegularStyle"
                android:layout_width="@dimen/_250sdp"
                android:layout_height="@dimen/_35sdp"
                android:layout_alignParentBottom="true"
                android:background="@color/colorBalck1"
                android:gravity="center_vertical"
                android:visibility="gone"
                android:paddingLeft="@dimen/_10sdp"
                android:textColor="@color/colorLightWhite"
                />
        </RelativeLayout>
    </LinearLayout>

</layout>